添加日志分析命令注释 方便复制